# Job-Application-Agent

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  discover-and-prepare.yml  generate-real-packs.yml  job-discovery-demo.yml  profile-pipeline.yml  saved-alert-discovery.yml
app/api/: __init__.py  main.py
app/cli/: main.py
app/core/: application_service.py  application_tracker.py  ats_scorer.py  email_job_ingestion.py  evidence_matcher.py  fit_scorer.py  generators.py  github_portfolio.py  interview_prep.py  jd_parser.py  job_discovery.py  missing_skills.py  profile_loader.py  profile_pipeline.py  resume_diff.py  resume_ingestion.py
app/dashboard/: streamlit_app.py
app/models/: __init__.py  schemas.py
app/validators/: truthfulness_validator.py
config/: job_alert_sources.example.yaml  job_sources.example.yaml  job_sources.real.template.yaml  job_sources.saved_alerts.yaml  profile_pipeline.yaml
dashboard/: streamlit_app.py
data/job_alert_exports/: example_linkedin_genai_qa_alert.html  (+3 more)
docs/: API_AND_DASHBOARD.md  APPLICATION_TRACKER.md  ARCHITECTURE.md  ATS_AND_INTERVIEW_PREP.md  FIT_SCORING.md  JOB_DISCOVERY_AGENT.md  PRODUCT_SCOPE.md  PROFILE_AND_PORTFOLIO_INGESTION.md  PROFILE_PIPELINE.md  SECURITY_AND_ETHICS.md
profile/: master_profile.example.yaml  master_profile.yaml  project_portfolio.example.yaml  project_portfolio.yaml  resume_rules.example.yaml  resume_rules.yaml
scripts/: generate_examples.py
tests/: test_api.py  test_api_layer.py  test_core_flow.py
(+18 files in other folders)
