[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfoliofit-agent"
version = "0.2.0"
description = "Evidence-based job application preparation agent with fit scoring, evidence mapping, ATS scoring, APIs, dashboard, and tailored application packs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ram Golladi"}]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.1",
  "Jinja2>=3.1.0",
  "python-docx>=1.1.0",
  "reportlab>=4.0.0",
  "rich>=13.7.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "streamlit>=1.36.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
  "types-PyYAML>=6.0.12",
  "httpx>=0.27.0"
]

[project.scripts]
portfoliofit = "app.cli.main:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["templates/**/*.j2"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
